src/snapshots/binder_tests__two_tasks_nested.snap
---
source: src/binder_tests.rs
expression: bound
---
[
    BoundTask {
        id: Id(
            0,
        ),
        name: [
            Text(
                Borrowed(
                    "Title of A",
                ),
            ),
        ],
        description: [],
        depends_on: [
            Id(
                1,
            ),
        ],
    },
    BoundTask {
        id: Id(
            1,
        ),
        name: [
            Text(
                Borrowed(
                    "Title of B",
                ),
            ),
        ],
        description: [],
        depends_on: [],
    },
]
